// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GuiPlugins tools filter android + US as expected 1`] = `
Array [
  Object {
    "cryptoCodes": Array [],
    "deepPath": "",
    "deepQuery": Object {},
    "description": "",
    "paymentTypes": Array [
      "credit",
    ],
    "pluginId": "phony",
    "title": "Credit card",
  },
  Object {
    "cryptoCodes": Array [],
    "deepPath": "",
    "deepQuery": Object {},
    "description": "",
    "paymentTypes": Array [
      "wire",
      "hack",
    ],
    "pluginId": "gox",
    "title": "Wire transfer",
  },
]
`;

exports[`GuiPlugins tools filter ios + JP as expected 1`] = `
Array [
  Object {
    "cryptoCodes": Array [],
    "deepPath": "",
    "deepQuery": Object {},
    "description": "",
    "paymentTypes": Array [
      "wire",
      "hack",
    ],
    "pluginId": "gox",
    "title": "Nice lawsuit",
  },
]
`;

exports[`GuiPlugins tools filter ios + US as expected 1`] = `
Array [
  Object {
    "cryptoCodes": Array [],
    "deepPath": "/applePay",
    "deepQuery": Object {},
    "description": "",
    "paymentTypes": Array [
      "applepay",
    ],
    "pluginId": "phony",
    "title": "Apple Pay",
  },
  Object {
    "cryptoCodes": Array [],
    "deepPath": "",
    "deepQuery": Object {},
    "description": "",
    "paymentTypes": Array [
      "wire",
      "hack",
    ],
    "pluginId": "gox",
    "title": "Wire transfer",
  },
  Object {
    "cryptoCodes": Array [],
    "deepPath": "",
    "deepQuery": Object {},
    "description": "",
    "paymentTypes": Array [
      "credit",
    ],
    "pluginId": "phony",
    "title": "Credit card",
  },
]
`;

exports[`Production plugin data Buy plugins match snapshot on android + IL 1`] = `
Array [
  Object {
    "cryptoCodes": Array [
      "BTC",
      "ETH",
    ],
    "deepPath": "/order/buy",
    "deepQuery": Object {
      "order_id": "null",
      "page": "0",
    },
    "description": "Fee: 5.95% / Settlement: 1 - 48hours
Level 1 Limit:  €10000/day
Level 2 Limit: Unlimited",
    "partnerIconPath": "https://edge.app/wp-content/uploads/2019/08/bits-of-gold-logo-sm.png",
    "paymentTypeLogoKey": "bank",
    "paymentTypes": Array [
      "bank",
    ],
    "pluginId": "bitsofgold",
    "title": "Israeli Bank Transfer",
  },
  Object {
    "cryptoCodes": Array [
      "BTC",
      "BCH",
      "BSV",
      "ETH",
      "LTC",
      "XRP",
    ],
    "deepPath": "",
    "deepQuery": Object {},
    "description": "Fee: 7% / Settlement: 10 - 30min
Limit: $18000/day",
    "partnerIconPath": "https://edge.app/wp-content/uploads/2019/03/simplex-logo-sm-square.png",
    "paymentTypeLogoKey": "credit",
    "paymentTypes": Array [
      "credit",
    ],
    "pluginId": "simplex",
    "title": "Credit and Debit Card",
  },
  Object {
    "cryptoCodes": Array [
      "BTC",
      "BCH",
      "ETH",
      "DAI",
      "LTC",
      "EOS",
      "XRP",
      "XLM",
      "BAT",
      "BNB",
      "PAX",
      "QTUM",
      "RVN",
      "TUSD",
      "USDC",
      "USDT",
    ],
    "deepPath": "",
    "deepQuery": Object {},
    "description": "Fee: 6.5% / Settlement: 10 minutes
Daily Limit: $10800
Monthly Limit: $54000",
    "partnerIconPath": "https://edge.app/wp-content/uploads/2019/05/icon_black_small.png",
    "paymentTypeLogoKey": "credit",
    "paymentTypes": Array [
      "credit",
    ],
    "pluginId": "moonpay",
    "title": "Credit Card",
  },
]
`;

exports[`Production plugin data Buy plugins match snapshot on iOS + US 1`] = `
Array [
  Object {
    "cryptoCodes": Array [
      "BTC",
      "ETH",
      "DAI",
    ],
    "deepPath": "",
    "deepQuery": Object {},
    "description": "Fee: 1% / Settlement: 1 - 5days
Limit: $2500/week",
    "partnerIconPath": "https://edge.app/wp-content/uploads/2019/01/wyre-logo-square-small.png",
    "paymentTypeLogoKey": "bank",
    "paymentTypes": Array [
      "bank",
    ],
    "pluginId": "wyre",
    "title": "ACH Bank Transfer",
  },
  Object {
    "cryptoCodes": Array [
      "BTC",
      "BCH",
      "BSV",
      "ETH",
      "LTC",
      "XRP",
    ],
    "deepPath": "",
    "deepQuery": Object {},
    "description": "Fee: 7% / Settlement: 10 - 30min
Limit: $18000/day",
    "partnerIconPath": "https://edge.app/wp-content/uploads/2019/03/simplex-logo-sm-square.png",
    "paymentTypeLogoKey": "credit",
    "paymentTypes": Array [
      "credit",
    ],
    "pluginId": "simplex",
    "title": "Credit and Debit Card",
  },
  Object {
    "cryptoCodes": Array [
      "BTC",
      "BCH",
      "ETH",
      "DAI",
      "LTC",
      "EOS",
      "XRP",
      "XLM",
      "BAT",
      "BNB",
      "PAX",
      "QTUM",
      "RVN",
      "TUSD",
      "USDC",
      "USDT",
    ],
    "deepPath": "",
    "deepQuery": Object {},
    "description": "Fee: 6.5% / Settlement: 10 minutes
Daily Limit: $10800
Monthly Limit: $54000",
    "partnerIconPath": "https://edge.app/wp-content/uploads/2019/05/icon_black_small.png",
    "paymentTypeLogoKey": "applepay",
    "paymentTypes": Array [
      "credit",
      "applepay",
    ],
    "pluginId": "moonpay",
    "title": "Apple Pay and Credit Card",
  },
  Object {
    "cryptoCodes": Array [
      "BTC",
    ],
    "deepPath": "/",
    "deepQuery": Object {},
    "description": "Fee: 3-8% / Settlement: Instant
Limit: $200 - $3000/day",
    "partnerIconPath": "https://edge.app/wp-content/uploads/2019/05/libertyXlogo.png",
    "paymentTypeLogoKey": "cash",
    "paymentTypes": Array [
      "cash",
      "credit",
    ],
    "pluginId": "libertyx",
    "title": "Cash and Debit Card",
  },
]
`;

exports[`Production plugin data Sell plugins match snapshot on iOS + US 1`] = `
Array [
  Object {
    "cryptoCodes": Array [
      "BTC",
      "ETH",
      "DAI",
    ],
    "deepPath": "",
    "deepQuery": Object {},
    "description": "Fee: 1% / Settlement: 1 - 5days
Limit: Unlimited",
    "partnerIconPath": "https://edge.app/wp-content/uploads/2019/01/wyre-logo-square-small.png",
    "paymentTypeLogoKey": "bank",
    "paymentTypes": Array [
      "bank",
    ],
    "pluginId": "wyre",
    "title": "ACH Bank Transfer",
  },
  Object {
    "cryptoCodes": Array [
      "BTC",
      "ETH",
      "LINK",
      "DAI",
      "LTC",
    ],
    "deepPath": "",
    "deepQuery": Object {
      "country": "US",
    },
    "description": "Fee: Varies / Settlement: 10 - 20min
Limit: Varies",
    "partnerIconPath": "https://developer.airbitz.co/content/mktg/bitaccess.png",
    "paymentTypeLogoKey": "cash",
    "paymentTypes": Array [
      "cash",
    ],
    "pluginId": "bitaccess",
    "title": "Cash",
  },
  Object {
    "cryptoCodes": Array [
      "BTC",
      "DASH",
      "DOGE",
      "ETH",
      "LTC",
    ],
    "deepPath": "",
    "deepQuery": Object {},
    "description": "Buy gift cards and reload phones with crypto",
    "partnerIconPath": "https://edge.app/wp-content/uploads/2019/01/bitrefill-2.png",
    "paymentTypeLogoKey": "giftcard",
    "paymentTypes": Array [
      "giftcard",
    ],
    "pluginId": "bitrefill",
    "title": "Gift Cards",
  },
]
`;
